<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LePains"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/btnBaguette"
        style="@style/DigitBtnStyle"
        android:layout_width="145dp"
        android:layout_height="53dp"
        android:layout_marginBottom="420dp"
        android:layout_marginStart="225dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/rounded_corner"
        android:onClick="appelBaguette"
        android:text="@string/baguette"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPainTradition"
        style="@style/DigitBtnStyle"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="124dp"
        android:layout_marginStart="36dp"
        android:background="@drawable/rounded_corner"
        android:onClick="appelPainTradition"
        android:text="@string/pain_tradition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imTarte"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRetour"
        android:layout_width="69dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="170dp"
        android:layout_marginStart="170dp"
        android:background="@drawable/icons8_home_64"
        android:onClick="appelHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imBtnAide_Pain"
        android:layout_width="41dp"
        android:layout_height="48dp"
        android:onClick="appelAide"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icons8_question_mark_64"
        tools:ignore="SpeakableTextPresentCheck" />


    <ImageView
        android:id="@+id/imBaguette"
        android:layout_width="171dp"
        android:layout_height="275dp"
        android:layout_marginBottom="255dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="73dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/how_to_make_french_baguette" />

    <ImageView
        android:id="@+id/imPainTradition"
        android:layout_width="149dp"
        android:layout_height="237dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="234dp"
        android:layout_marginTop="269dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crusty_french_baguette_recipe__perfect_results__so_easy___baking_a_moment" />

    <TextView
        android:id="@+id/tvTitreCategorie"
        style="@style/DigitTxtTitreStyle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/categorie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>